--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
+    "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "flowbite-vue": "^0.0.17-next.2",
+    "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
